--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "react": [ "./node_modules/@types/react" ]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -13,8 +14,9 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
+    // "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
